Tue Jan 20 12:28:37 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (readline): fallback to normal gets on
	  Windows because IO.console.getch is not always do as expected.

Tue Jan 20 11:31:07 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: update usage.

Tue Jan 20 11:23:47 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb (mygets): to support Backspace
	  implement gets by itself.

Tue Jan 20 02:54:11 2015  Zachary Scott  <e@zzak.io>

	* file.c: NotImplementedError is raised if birthtime is unavailable.
	  Patch by @y-yagi san and [Fixes GH-817] [ci skip] [DOC]

	* ext/pathname/pathname.c: ditto.

Mon Jan 19 22:08:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (include_modules_at): allow prepend each modules upto
	  once for each classes.  [EXPERIMENTAL]

Sun Jan 18 18:32:20 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* math.c (math_atan2): revive documentation before r49220.
	  http://d.hatena.ne.jp/nagachika/20150112/ruby_trunk_changes_49213_49226

Sun Jan 18 15:57:32 2015  Seiei Higa  <hanachin@gmail.com>

	* vm_method.c (check_definition): Module#public_method_defined?,
	  Module#private_method_defined?, Module#protected_method_defined?
	  should not use refinements. [ruby-core:67656] [Bug #10753]

Sun Jan 18 15:50:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (rb_vm_bugreport): check by configured result instead
	  of system name for old FreeBSD.  based on a patch by Steve Wills
	  at [ruby-core:67655].  [Bug #10752]

Sun Jan 18 12:56:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (VPATH, NEWLINE_C), common.mk (common-srcs): make
	  and use newline.c under enc/trans directory, not toplevel.  no
	  longer search enc directory implicitly.

	* configure.in, enc/Makefile.in (BUILTIN_ENCS, BUILTIN_TRANSES):
	  prefix respective directory names to builtin encodings and
	  transcoder source names.
