@@ -1,3 +1,7 @@
+Tue Jan 20 12:58:33 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* tool/redmine-backporter.rb: now can change the page of `ls`.
+
 Tue Jan 20 12:28:37 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* tool/redmine-backporter.rb (readline): fallback to normal gets on
